# api.yml
@@ -17,42 +17,68 @@ info:
 servers:
   - url: http://localhost
 paths:
-  /hello:
-    get:
-      summary: This is just a test endpoint to get you started. Please delete this endpoint.
-      operationId: hello
-      parameters:
-        - name: id
-          in: query
-          required: true
-          schema:
-            type: integer
+  /users/registration:
+    post:
+      operationId: userRegistration
+      requestBody:
+        description: Registration payload
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegistrationRequest'
       responses:
         '200':
-          description: Test return
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/HelloResponse"
-        '404':
-          description: Not found
+          description: Successfully registration
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/ErrorResponse"
+                $ref: '#/components/schemas/RegistrationResponse'
+        '400':
+          description: Failed registration
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 components:
   schemas:
-    HelloResponse:
+    RegistrationRequest:
       type: object
-      required:
-        - message
+      required: [ fullName, countryCode, phoneNumber, password ]
       properties:
-        message:
+        fullName:
           type: string
+          description: Must be at minimum 3 characters and maximum 60 characters
+          x-oapi-codegen-extra-tags:
+            validate: required,min=3,max=60
+        countryCode:
+          type: string
+          description: Phone country code
+          example: '+62'
+          x-oapi-codegen-extra-tags:
+            validate: required,min=3,max=7
+        phoneNumber:
+          type: string
+          description: Must be at minimum 10 characters and maximum 13 characters
+          x-oapi-codegen-extra-tags:
+            validate: required,min=10,max=13
+        password:
+          type: string
+          description: Must be minimum 6 characters and maximum 64 characters, containing at least 1 capital characters AND 1 number AND 1 special (non alphanumeric) characters
+          x-oapi-codegen-extra-tags:
+            validate: required,min=6,max=64
+#            validate: required,min=6,max=64,regexp=^(?=.*?[A-Z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-])
+    RegistrationResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
     ErrorResponse:
       type: object
-      required:
-        - message
+      required: [code, message]
       properties:
+        code:
+          type: string
         message:
           type: string
