# repository/types.go
@@ -1,10 +1,9 @@
 // This file contains types that are used in the repository layer.
 package repository
 
-type GetTestByIdInput struct {
-	Id string
-}
-
-type GetTestByIdOutput struct {
-	Name string
+type CreateUserParams struct {
+	FullName    string `json:"full_name"`
+	Password    string `json:"password"`
+	CountryCode string `json:"country_code"`
+	PhoneNumber string `json:"phone_number"`
 }
